test/files/neg/t800.check
t800.scala:4: error: qualification is already defined as value qualification
  val qualification = false;
      ^
t800.scala:8: error: method qualification is defined twice
  conflicting symbols both originated in file 't800.scala'
  val qualification = false;
      ^
t800.scala:12: error: value qualification is defined twice
  conflicting symbols both originated in file 't800.scala'
  var qualification = false;
      ^
t800.scala:16: error: method qualification is defined twice
  conflicting symbols both originated in file 't800.scala'
  var qualification = false;
      ^
four errors found
